# Spice

./: .gitignore  .gitmodules  Makefile  Push-Spice.ps1  README.md  SETUP.md  TODO  deploy_lang_and_vscode.ps1
examples/: 001-syntax_and_blocks.spc  002-strict_typing.spc  010-classes_and_constructors.spc  011-inheritance.spc  012-interfaces.spc  013-abstract_classes.spc  014-final.spc  015-static_methods.spc  020-data_classes.spc  021-enums.spc  030-generics.spc  040-switch.spc  README.md  (+8 more)
spice/: pyproject.toml  setup.py
spice-lang/: pyproject.toml  setup.py
spice-lang/spice/: __init__.py  errors.py  printils.py
spice-lang/spice/annotations/: __init__.py  base.py  registry.py
spice-lang/spice/annotations/builtins/: __init__.py  print_on_call.py
spice-lang/spice/cli/: __init__.py  cli_flags.py  cli_handler.py
spice-lang/spice/compilation/: __init__.py  build_flags.py  cython_compiler.py  pipeline.py  spicefile.py  symbol_table.py
spice-lang/spice/compilation/checks/: __init__.py  annotation_stage.py  compile_time_check.py  final_checker.py  generic_bound_checker.py  interface_checker.py  method_overload_resolver.py  symbol_table_builder.py  type_checker.py
spice-lang/spice/lexer/: follow_set.py  tokenizer.py  tokens.py
spice-lang/spice/parser/: ast_nodes.py  expression_parser.py  parser.py
spice-lang/spice/styping/: type_system.py
spice-lang/spice/transformer/: transformer.py
spice-lang/spice/utils/: hashing.py
spice-lang/tests/: test_annotations.py  test_class_keywords.py  test_constructor_transform.py  test_cython_emit.py  test_data_classes.py  test_enums.py  test_final_checker.py  test_generic_bounds.py  test_generics.py  test_lexer.py  test_parcer.py  test_pipeline_imports.py  test_transformer.py  test_type_checker.py
spice/spice/: __init__.py  errors.py
spice/spice/cli/: __init__.py  cli_flags.py  cli_handler.py
spice/spice/compilation/: pipeline.py  spicefile.py  symbol_table.py
spice/spice/compilation/checks/: __init__.py  final_checker.py  method_overload_resolver.py  type_checker.py
spice/spice/lexer/: follow_set.py
spice/spice/parser/: ast_nodes.py  expression_parser.py  parser.py
spice/spice/styping/: __init__.py
spice/spice/transformer/: transformer.py
spice/spice/utils/: __init__.py
spice/tests/: test_lexer.py
(+14 files in other folders)
