[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spicy"
version = "0.1.0"
description = "Python but with all the spice"
authors = [
    { name = "Reclipse" }
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "colorama>=0.4",
    "rites>=0.5.3",
    "multipledispatch>=1.0.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
spice = "spice.cli.cli_handler:from_cli"

[tool.setuptools.packages.find]
where = ["spice"]
